--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <div class="contact-image-container">
             <img
               class="contact-image2"
-              src="images/2.jpg"
+              src="one.jpg"
               alt="Profile Image"
             />
           </div>
@@ -276,7 +276,7 @@
           <div class="contact-image-container">
             <img
               class="contact-image2"
-              src="images/14.jpg"
+              src="one.jpg"
               alt="Profile Image"
             />
           </div>
@@ -316,7 +316,7 @@
           <div class="contact-image-container">
             <img
               class="contact-image2"
-              src="images/4.jpg"
+              src="one.jpg"
               alt="Profile Image"
             />
           </div>
@@ -350,7 +350,7 @@
           <div class="contact-image-container">
             <img
               class="contact-image2"
-              src="images/5.jpg"
+              src="one.jpg"
               alt="Profile Image"
             />
           </div>
@@ -384,7 +384,7 @@
           <div class="contact-image-container">
             <img
               class="contact-image2"
-              src="images/6.jpg"
+              src="one.jpg"
               alt="Profile Image"
             />
           </div>
@@ -423,7 +423,7 @@
           <div class="contact-image-container">
             <img
               class="contact-image2"
-              src="images/7.jpg"
+              src="one.jpg"
               alt="Profile Image"
             />
           </div>
