--- a/index.html
+++ b/index.html
@@ -460,8 +460,249 @@
         <b>Engineering Designing & Planning Division</b><br /><span class="st2"></span>
       </h3>
 
+      <div class="contact-card1">
+        <div class="contact-details">
+          <div class="contact-image-container">
+            <img
+              class="contact-image2"
+              src="one.jpg"
+              alt="Profile Image"
+            />
+          </div>
+          <div>
+            <div class="name">
+              Eng. M. Ajanthiny<br />
+              <span class="disgnation">Deputy Director (EDP) </span><br />
+              <p>
+                In.Com: <span id="">435</span><br />
+                Mobile : <span id="ddedp_mobile"> 076-6579393</span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="contact-buttons">
+          <button class="call-button" onclick="callNumber('ddedp_mobile')">
+            Call Mobile
+          </button>
+        </div>
+        <script>
+          function callNumber(number, isMobile = false) {
+            var prefix = isMobile ? "tel:" : "tel:";
+            window.location.href =
+              prefix + document.getElementById(number).textContent;
+          }
+        </script>
+      </div>
 
-     
+      <div class="contact-card1">
+        <div class="contact-details">
+          <div class="contact-image-container">
+            <img
+              class="contact-image2"
+              src="one.jpg"
+              alt="Profile Image"
+            />
+          </div>
+          <div>
+            <div class="name">
+              Mrs. D.K.H. Karunarathne<br />
+              <span class="disgnation">Assistant Director (Architect)</span><br />
+              <p>
+                In.Com: <span id="">416</span><br />
+                Mobile : <span id="ada_mobile">071-6155493</span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="contact-buttons">
+          <button class="call-button" onclick="callNumber('ada_mobile')">
+            Call Mobile
+          </button>
+        </div>
+        <script>
+          function callNumber(number, isMobile = false) {
+            var prefix = isMobile ? "tel:" : "tel:";
+            window.location.href =
+              prefix + document.getElementById(number).textContent;
+          }
+        </script>
+      </div>
+
+      <div class="contact-card1">
+        <div class="contact-details">
+          <div class="contact-image-container">
+            <img
+              class="contact-image2"
+              src="one.jpg"
+              alt="Profile Image"
+            />
+          </div>
+          <div>
+            <div class="name">
+              Eng. K.P.S.A. Jayakody <br />
+              <span class="disgnation">Chief Engineer</span><br />
+              <p>
+                In.Com: <span id="">417</span><br />
+                Mobile : <span id="ada_mobile">071-8289776</span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="contact-buttons">
+          <button class="call-button" onclick="callNumber('ada_mobile')">
+            Call Mobile
+          </button>
+        </div>
+        <script>
+          function callNumber(number, isMobile = false) {
+            var prefix = isMobile ? "tel:" : "tel:";
+            window.location.href =
+              prefix + document.getElementById(number).textContent;
+          }
+        </script>
+      </div>
+
+      <div class="contact-card1">
+        <div class="contact-details">
+          <div class="contact-image-container">
+            <img
+              class="contact-image2"
+              src="one.jpg"
+              alt="Profile Image"
+            />
+          </div>
+          <div>
+            <div class="name">
+              Eng. P.A.N.H. Thilakarathne <br />
+              <span class="disgnation">Chief Engineer</span><br />
+              <p>
+                In.Com: <span id="">417</span><br />
+                Mobile : <span id="ada_mobile">071-4439121</span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="contact-buttons">
+          <button class="call-button" onclick="callNumber('ada_mobile')">
+            Call Mobile
+          </button>
+        </div>
+        <script>
+          function callNumber(number, isMobile = false) {
+            var prefix = isMobile ? "tel:" : "tel:";
+            window.location.href =
+              prefix + document.getElementById(number).textContent;
+          }
+        </script>
+      </div>
+
+      <div class="contact-card1">
+        <div class="contact-details">
+          <div class="contact-image-container">
+            <img
+              class="contact-image2"
+              src="one.jpg"
+              alt="Profile Image"
+            />
+          </div>
+          <div>
+            <div class="name">
+              Eng. L.D. Amila Sanjeewa<br />
+              <span class="disgnation">Chief Engineer</span><br />
+              <p>
+                In.Com: <span id="">435</span><br />
+                Mobile : <span id="ada_mobile">077-3679691
+                </span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="contact-buttons">
+          <button class="call-button" onclick="callNumber('ada_mobile')">
+            Call Mobile
+          </button>
+        </div>
+        <script>
+          function callNumber(number, isMobile = false) {
+            var prefix = isMobile ? "tel:" : "tel:";
+            window.location.href =
+              prefix + document.getElementById(number).textContent;
+          }
+        </script>
+      </div>
+
+      <div class="contact-card1">
+        <div class="contact-details">
+          <div class="contact-image-container">
+            <img
+              class="contact-image2"
+              src="one.jpg"
+              alt="Profile Image"
+            />
+          </div>
+          <div>
+            <div class="name">
+              Eng. T. Gunatheepan<br />
+              <span class="disgnation">Chief Engineer</span><br />
+              <p>
+                In.Com: <span id="">435</span><br />
+                Mobile : <span id="ada_mobile">077-3928154
+                </span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="contact-buttons">
+          <button class="call-button" onclick="callNumber('ada_mobile')">
+            Call Mobile
+          </button>
+        </div>
+        <script>
+          function callNumber(number, isMobile = false) {
+            var prefix = isMobile ? "tel:" : "tel:";
+            window.location.href =
+              prefix + document.getElementById(number).textContent;
+          }
+        </script>
+      </div>
+
+      <div class="contact-card1">
+        <div class="contact-details">
+          <div class="contact-image-container">
+            <img
+              class="contact-image2"
+              src="one.jpg"
+              alt="Profile Image"
+            />
+          </div>
+          <div>
+            <div class="name">
+              Mrs. J.G.A.S. Jayasekara<br />
+              <span class="disgnation">Drawing Officer</span><br />
+              <p>
+                In.Com: <span id="">428</span><br />
+                Mobile : <span id="ada_mobile">071-4439972
+
+                </span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="contact-buttons">
+          <button class="call-button" onclick="callNumber('ada_mobile')">
+            Call Mobile
+          </button>
+        </div>
+        <script>
+          function callNumber(number, isMobile = false) {
+            var prefix = isMobile ? "tel:" : "tel:";
+            window.location.href =
+              prefix + document.getElementById(number).textContent;
+          }
+        </script>
+      </div>
+
+
 
       <br /><br />
     </div>
