--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
               <span class="disgnation">Drawing Officer</span><br />
               <p>
                 In.Com: <span id="">428</span><br />
-                Mobile : <span id="ada_mobile">071-4439972
+                Mobile : <span id="dr_mobile">071-4439972
 
                 </span>
               </p>
@@ -689,7 +689,7 @@
           </div>
         </div>
         <div class="contact-buttons">
-          <button class="call-button" onclick="callNumber('ada_mobile')">
+          <button class="call-button" onclick="callNumber('dr_mobile')">
             Call Mobile
           </button>
         </div>
